Added books on frontend. Maybe later add a new book dataset because this is pretty weak
